--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<div echarts [options]="echartOption" class="echartsStyle" style="width: 600px; height: 400px" (chartInit)="onChartInit($event)"></div>
+<!-- <div echarts [options]="echartOption" class="echartsStyle" style="width: 600px; height: 400px" (chartInit)="onChartInit($event)"></div>
 <div>
   <span><button class="btn btn-outline-primary" (click)="getWidth()">getWidth()</button></span>
   <span><button class="btn btn-outline-primary" (click)="getHeight()">getHeight()</button></span>
   <span><button class="btn btn-outline-primary" (click)="getDom()">getDom()</button></span>
   <span><button class="btn btn-outline-primary" (click)="getOption()">getOption()</button></span>
   <span><button class="btn btn-outline-danger" (click)="clear()">clear()</button></span>
-</div>
+</div> -->
+<div echarts [options]="echartOption" class="echartsStyle" style="width: 600px; height: 400px" (chartInit)="onChartInit($event)"></div>
